
2023-09-07  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c (alloc_figurative): optimized handling for SPACES and ZEROES
	* strings.c (cob_inspect_translating), common.h: variant of
	  cob_inspect_converting that is called with a pre-computed translation
	  table (COBOL source using only constants)
	* strings.c (cob_inspect_converting): replaced partial conversion table
	  with full table, which saves a check on each replaced byte
	* strings.c (cob_inspect_converting): also call cob_real_put_sign for
	  early exits

2023-09-04  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_add_int): minor adjustment to scale handling
	* numeric.c (packed_is_negative): optimized by memcmp instead of loop
	* numeric.c (cob_decimal_get_display): fixed broken sign in
	  diff calculation

2023-08-30  Simon Sobisch <simonsobisch@gnu.org>

	* move.c (cob_move_display_to_packed), numeric.c (cob_decimal_get_packed):
	  fix C RTS check raising overflow by replacing casting to char by "& 0xFF"
	* cconv.c (cob_field_to_string): fix analyzer warnings

2023-08-22  Simon Sobisch <simonsobisch@gnu.org>

	* version.h: bump to 3.3

2023-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_move_bcd): fix bug #904 unsigned to signed must write
	  positive sign

2023-07-28  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c, common.c: replace use of NCURSES_MOUSE_VERSION by
	  HAVE_MOUSEMASK
	* fileio.c (cob_file_sort_giving_internal): fix memory cleanup

2023-07-27  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* move.c (cob_move_display_to_packed): fix data corruption caused
	  by packing one extra digit from the input display field

2023-07-25  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_linkage_size), common.h: new function
	  to check for EC-PROGRAM-ARG-MISMATCH
	* common.c (raise_arg_mismatch): new function to provide a "virtual"
	  module entry for better error messages
	* common.c (call_exit_handlers_and_terminate, cob_runtime_error):